genie style and command bar button style

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.html
@@ -87,9 +87,10 @@ React refresh bug test
             <detector-command-bar (openPanel)="setFocusOnCallpsibleButton()"></detector-command-bar>
             <router-outlet></router-outlet>
           </div>
-          <div id="collapse-genie-button"class="col-md col-sm col-lg" class="collapsible-button"
+          <div id="collapse-genie-button button-container"class="col-md col-sm col-lg" class="collapsible-button"
             style=" float: right; height: 100vh; border-left:1px solid #cccccc; " (click)="openGeniePanel()">
             <i class="fa fa-angle-double-left" style="margin: 5px;font-size:13px;"></i>
+              <!-- <span class="tooltiptext" style="margin-left: -30px;">Ask Genie</span> -->
           </div>
     </section>
   </div>
