--- a/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.html
@@ -15,7 +15,7 @@
       <div class="status-bar-title">{{model.name}}</div>
       <div class="align-content-center"><i class="fa fa-chevron-right"></i></div>
     </div> -->
-    <div *ngIf="noSearchResult === false">
+    <!-- <div *ngIf="noSearchResult === false">
         <span>Does this information help you solve the issue?</span>
         <button class="feedback-button" (click)="addHelpfulFeedback()">Yes</button>
         <button class="feedback-button" (click)="addNotHelpfulFeedback()">No</button>
@@ -23,7 +23,12 @@
     <div *ngIf="noSearchResult === true">
         <span>Sorry we are not able to find any result based on your questions.</span>
       </div>
-  </div>
+  </div> -->
+  <div *ngIf="noSearchResult === true">
+      <div tabindex="0" class="message-sent-by-system" style="margin-top:10px; margin-bottom:10px">
+      <span>Sorry we are not able to find any result based on your questions.</span>
+      </div>
+    </div>
   <div *ngIf="showFeedback">
       <div tabindex="0" class="message-sent-by-system" style="margin-top:10px; margin-bottom:10px">{{feedbackText}}
       </div>
@@ -33,9 +38,10 @@
         </div>
   </div>
 
-  <div *ngIf="showDocumentSearchResult&&content">
+  <div id="search-documents" *ngIf="content">
       <div class="article-container">
-        <div class="article" *ngFor="let article of content" (click)="openArticle(article)" tabindex="0" (keyup.enter)="openArticle(article)">
+        <div class="article-heading">Recommended Documents</div>
+        <div class="article" *ngFor="let article of content" (click)="openArticle(article)" tabindex="0" (keyup.enter)="openArticle(article)" >
           <a>{{article.title}}
             <i class="fa fa-external-link"></i>
           </a>
