--- a/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.scss
@@ -5,3 +5,29 @@
     margin-right: 5px;
     margin-left: 5px;
 }
+
+.article-container {
+    max-width: 80%;
+    //margin-bottom: 100px;
+}
+
+.article {
+    border: 1px solid #dddddd;
+    cursor: pointer;
+    padding:10px;
+    margin-right: 10px;
+}
+
+.article > h5 {
+    color: blue;
+}
+
+.article-link {
+    color:  #949494
+}
+
+.article-heading {
+    color:black;
+    font-weight: bold;
+    margin:5px;
+}
