--- a/AngularApp/projects/app-service-diagnostics/src/app/supportbot/common/text-message/text-message.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/supportbot/common/text-message/text-message.component.html
@@ -1,3 +1,8 @@
 <div [class.message-sent-by-system]="!messageByUser" [class.message-sent-by-user]="messageByUser" tabindex="0" #messagefocus>
     {{message}}
 </div>
+<!--
+<div [class.message-sent-by-system]="!messageByUser" [class.message-sent-by-user]="messageByUser" tabindex="0" #messagefocus>
+  {{message}}
+</div> -->
+
