--- a/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.scss
@@ -1,9 +1,8 @@
 .feedback-button {
-    border:1px solid #015cda;
+    border:none;
     color: #015cda;
     border-radius: 10px;
-    margin-right: 5px;
-    margin-left: 5px;
+    margin-right: 3px;
 }
 
 .article-container {
