--- a/AngularApp/projects/app-service-diagnostics/src/styles/controls/_buttons.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles/controls/_buttons.scss
@@ -53,13 +53,21 @@
     }
 }
 
-.feedback-button{
-    width: 30px;
-    height: 30px;
-    margin:5px;
-    padding:3px;
-    border-radius: 20%;
-    border: 1px solid;
+// .feedback-button{
+//     width: 30px;
+//     height: 30px;
+//     margin:5px;
+//     padding:3px;
+// }
+
+.feedback-button {
+    border:none;
+    color: #015cda;
+    border-radius: 10px;
+    margin-right: 1px!important;
+    margin-left:5px!important;
+    min-width: 0px!important;
+    background-color: white;
 }
 
 .button-block{
