Update the chat text and auto open after 10 seconds.

--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
@@ -7,7 +7,7 @@
       </div>
       <hr>
       <div>
-        A Microsoft Support engineer will engage with you to help answer your questions.
+        I'd love to help you out with your issue and connect you with our quick help chat team.
       </div>
     </div>
     <div class="cxpChat-actionBtnContainer">
