Remove circular reference in genie panel component

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback-container/fabric-feedback-container.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback-container/fabric-feedback-container.component.html
@@ -1,15 +1,8 @@
-<div>
+<!-- <div>
   <div [ngStyle]="{'display':submitted === false ? 'block': 'none'}">
     <h3>Send us feedback</h3>
     <p>Thank you for taking the time to give us feedback.</p>
-    <!-- <div class="feedback-info">
-      <div style="vertical-align: middle;">
-        <span class="feedback-info-icon">
-          <fab-icon iconName="InfoSolid"></fab-icon>
-        </span>
-        <span>If you need help,please contact support</span>
-      </div>
-    </div> -->
+
 
     <div style="display:inline-flex">
       <svg class="svg-icon" viewBox="0 0 6 6" role="presentation" focusable="false"
@@ -47,4 +40,4 @@
       <div (click)="openGenieHandler()" class="feedback-btn">Ask Genie</div>
     </div>
   </div>
-</div>
+</div> -->
