--- a/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.html
@@ -26,7 +26,7 @@
   </div> -->
   <div *ngIf="noSearchResult === true">
       <div tabindex="0" class="message-sent-by-system" style="margin-top:10px; margin-bottom:10px">
-      <span>Sorry we are not able to find any result based on your questions.</span>
+      <span>Sorry we are not able to find any result based on your questions. Can you rephrease your last message?</span>
       </div>
     </div>
   <div *ngIf="showFeedback">
