--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-command-bar/detector-command-bar.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-command-bar/detector-command-bar.component.html
@@ -235,4 +235,4 @@ font-size: 14px;">
 ]" [shortMonths]="['Jan', 'Fab', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']" [days]="['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']"
     [shortDays]="['S', 'M', 'T', 'W', 'T', 'F', 'S']" goToToday="Go to last 24h" weekNumberFormatString="Week number {0}"></fab-calendar-strings>
 </fab-calendar>
-<genie-panel [(openPanel)]="openPanel"></genie-panel>
+<!-- <genie-panel [(openPanel)]="openPanel"></genie-panel> -->
