Route route route

--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.html
@@ -78,7 +78,7 @@ React refresh bug test
   </div> -->
   <div class="body-content" style="border:bold; color:black">
     <section class="sidebar">
-     <category-nav></category-nav>
+     <!-- <category-nav></category-nav> -->
          <!-- <fab-nav [groups]="groups" [styles]="styles" [initialSelectedKey]='initialSelectedKey'
         [selectedKey]='selectedKey'></fab-nav> -->
     </section>
