--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -23,7 +23,9 @@
         </ng-container>
       </div>
     </div> -->
-    <fabric-search-results></fabric-search-results>
+    <div style="margin:25px 0px;">
+      <fabric-search-results></fabric-search-results>
+    </div>
   </div>
   <div *ngIf="categories" class="category-container">
     <div *ngFor="let category of categories" style="display: inline-block;padding: 20px 40px 20px 0px" class="col-md-4">
