Move resource service

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.html
@@ -95,7 +95,7 @@ React refresh bug test
     </section>
   </div>
 </div>
-<genie-panel></genie-panel>
+<!-- <genie-panel></genie-panel> -->
 
 <!-- <div *ngFor="let category of allProblemCategories;let i = index">
         <collapsible-list [title]="category.Name" [collapsed]="category.Collapsed" *ngIf="(category.Subcategories | toolstack:AppStack | platformfilter:platform  | apptype:appType).length > 0">
