--- a/AngularApp/projects/app-service-diagnostics/src/app/app.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/app.component.html
@@ -1,5 +1,5 @@
 <tabs>
     <generic-comms></generic-comms>
     <router-outlet></router-outlet>
-    <!-- <genie-panel></genie-panel> -->
+    <genie-panel></genie-panel>
 </tabs>
