--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="home-content">
         <h2 tabindex="0" class="home-title">{{homePageText.title}}</h2>
         <p  tabindex="0" class="home-description">{{homePageText.description}}</p>
-        <p class="home-description">If you would like to look at the health check then <a>click here.</a>You can also ask chatbot <a>Genie</a> any questions you may have</p>
+        <p class="home-description">If you would like to look at the health check then <a (click)="_globals.openGeniePanel=true">click here.</a>You can also ask chatbot <a>Genie</a> any questions you may have</p>
     </div>
     <div class="home-container">
       <div style="margin:25px 0px;" (keyup.escape)="clearSearch()" role="search">
