--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
@@ -9,7 +9,7 @@
 </div>
 <detector-list-analysis withinDiagnoseAndSolve="true" detectorParmName="detectorName"[resourceId]="resourceId" [targetedScore]="targetedScore" [analysisId]="analysisId" [searchTerm]="searchTerm" [searchMode]="searchMode" (onComplete)="updateLoadingStatus($event)"></detector-list-analysis>
 
-<div [hidden]="detectorId === ''">
+<!-- <div [hidden]="detectorId === ''">
   <div>
     <div style="display: inline-block;margin-left: 20px">
       <h2>{{ detectorName }}</h2>
@@ -20,7 +20,7 @@
     </div>
   </div>
   <router-outlet></router-outlet>
-</div>
+</div> -->
 
 
 
