Add timpicker function

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-command-bar/detector-command-bar.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-command-bar/detector-command-bar.component.html
@@ -181,23 +181,24 @@
 <fab-callout [hidden]="!showChoices" [directionalHint]="'5'" [gapSpace]="'30'" [styles]="calloutStyles">
   <!-- <div>Time range</div>
   [selectedKey]="selectedItem && selectedItem.key" -->
-  <fab-choice-group [options]="choiceGroupOptions" defaultSelectedKey="'Last24Hours'">
+  <fab-choice-group [options]="choiceGroupOptions" [defaultSelectedKey]="'Last24Hours'">
   </fab-choice-group>
   <div *ngIf="showTimerPicker" class="row">
     <div style="padding:15px">Start Time </div>
     <fab-date-picker class="col-md-8" [strings]="dates" [minDate]="minDate" [maxDate]="maxDate" placeholder="Select a date..."
-      ariaLabel="Select start date" allowTextInput="true" showMonthPickerAsOverlay="true">
+      ariaLabel="Select start date" allowTextInput="true" showMonthPickerAsOverlay="true" (onSelectDate)="onSelectStartDateHandler($event)">
     </fab-date-picker>
-    <fab-masked-text-field class="col-md-4" maxLength="6" [(value)]="endClock" [iconProps]="{iconName: 'Clock'}" [mask]="'99:99'"
+    <fab-masked-text-field class="col-md-4" maxLength="6" [(value)]="startClock" [iconProps]="{iconName: 'Clock'}" [mask]="'99:99'"
       [maskChar]="'-'" [validateOnFocusOut]="true" [getErrorMessage]="getErrorMessageOnTextField"></fab-masked-text-field>
 
     <div style="padding:15px; margin-top:30px">End Time </div>
     <fab-date-picker class="col-md-8" [strings]="dates" [minDate]="minDate" [maxDate]="maxDate" placeholder="Select a date..."
-      ariaLabel="Select end date" allowTextInput="true" showMonthPickerAsOverlay="true">
+      ariaLabel="Select end date" allowTextInput="true" showMonthPickerAsOverlay="true" (onSelectDate)="onSelectEndDateHandler($event)">
     </fab-date-picker>
-    <fab-masked-text-field class="col-md-4" maxLength="6" [(value)]="startClock" [iconProps]="{iconName: 'Clock'}" [mask]="'99:99'"
+    <fab-masked-text-field class="col-md-4" maxLength="6" [(value)]="endClock" [iconProps]="{iconName: 'Clock'}" [mask]="'99:99'"
       [maskChar]="'-'" [validateOnFocusOut]="true" [getErrorMessage]="getErrorMessageOnTextField"></fab-masked-text-field>
   </div>
+  <div *ngIf="timeDiffError != '' && isCustom" style="color:red;">{{timeDiffError}}</div>
   <div style="padding:15px 0px">
     <fab-primary-button contentStyle="margin-right:10px" text="Apply" (onClick)="applyTimeRange()"></fab-primary-button>
     <fab-default-button text="Cancel" (onClick)="cancelTimeRange()"></fab-default-button>
