--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -35,5 +35,5 @@
   <div class="privacy-statement" tabindex="0">
     <a href="https://azure.microsoft.com/en-us/support/legal/?amp%3Bclcid=0x9" target="_blank">Privacy</a>
   </div>
-  <genie-panel></genie-panel>
+  <!-- <genie-panel></genie-panel> -->
 </div>
