--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback-container/fabric-feedback-container.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback-container/fabric-feedback-container.component.html
@@ -31,7 +31,7 @@
     <textarea [(ngModel)]="feedbackText" placeholder="Tell us about your experience..." tabindex="0" rows="7"
       cols="40"></textarea>
     <div class="feedback-submit">
-      <fab-primary-button (onClick)="submitFeedback()" [disabled]="rating == 0">Submit feddback</fab-primary-button>
+      <fab-primary-button (onClick)="submitFeedback()" [disabled]="rating == 0">Submit feedback</fab-primary-button>
     </div>
   </div>
 
