--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/genie-panel/genie-panel.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/genie-panel/genie-panel.component.html
@@ -58,7 +58,7 @@
       <!-- <fab-text-field [placeholder]="'Type your question'" [iconProps]="{iconName: 'send'}"></fab-text-field> -->
       <!-- [iconProps]="{iconName: 'send'}" -->
       <fab-search-box [placeholder]="'Type your question'" (onSearch)="onSearchEnter($event)"
-        [iconProps]="{iconName: 'send'}" contentStyle="height:31px;border-radius:15px"></fab-search-box>
+        [iconProps]="{iconName: 'send'}" contentStyle="height:31px;border-radius:15px" [value]="searchValue"></fab-search-box>
     </div>
   </div>
 </div>
