--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-tile/category-tile.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-tile/category-tile.component.scss
@@ -38,11 +38,11 @@
 
 .keyword {
     font-size: 12px;
-    border-radius: 5px;
-    padding:3px;
-    padding: 2px 4px;
-    margin: 0px 5px 5px 0px;
-    border: 1px solid #cdd1d4;
+    // border-radius: 5px;
+    // padding:3px;
+    // padding: 2px 4px;
+    // margin: 0px 5px 5px 0px;
+    // border: 1px solid #cdd1d4;
 }
 
 .category-title{
